undo enable errorprone